5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1595_1016.log
== SUBMITION (2019-03-31 15:41:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
a=flot(input("Insira o valor de A:"))
b=flot(input("Insira o valor de B"))
c=flot(input("Insira o valor de C"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(srqt(A))
print(round(R,5))
-- EXECUTION TIME:
0.141625
-- ERROR:
  File "/home/codebench/codes/1595/1016/main.py", line 4
    from math import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:42:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
a=flot(input("Insira o valor de A:"))
b=flot(input("Insira o valor de B"))
c=flot(input("Insira o valor de C"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.202887
-- ERROR:
  File "/home/codebench/codes/1595/1016/main.py", line 4
    from math import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:42:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
a=flot(input("Insira o valor de A:"))
b=flot(input("Insira o valor de B"))
c=flot(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.180972
-- ERROR:
  File "/home/codebench/codes/1595/1016/main.py", line 4
    from math import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:42:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
a=flot(input("Insira o valor de A:"))
b=flot(input("Insira o valor de B"))
c=flot(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.177734
-- ERROR:
  File "/home/codebench/codes/1595/1016/main.py", line 4
    from math import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:42:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B"))
c=float(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.193584
-- ERROR:
  File "/home/codebench/codes/1595/1016/main.py", line 4
    from math import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:42:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B"))
c=float(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.151981
-- ERROR:
  File "/home/codebench/codes/1595/1016/main.py", line 4
    from math import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:42:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B"))
c=float(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.108376
-- ERROR:
  File "/home/codebench/codes/1595/1016/main.py", line 4
    from math import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B"))
c=float(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.12288
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 11, in <module>
    A=S*(s-a)*(s-b)*(s-c)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B"))
c=float(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.159344
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 11, in <module>
    A=S*(s-a)*(s-b)*(s-c)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B"))
c=float(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.104587
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 11, in <module>
    A=S*(s-a)*(s-b)*(s-c)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B"))
c=float(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.161661
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 11, in <module>
    A=S*(s-a)*(s-b)*(s-c)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B"))
c=float(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.110741
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/1016/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B"))
c=float(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.303118
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 11, in <module>
    A=S*(s-a)*(s-b)*(s-c)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B"))
c=float(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.16559
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 11, in <module>
    A=S*(s-a)*(s-b)*(s-c)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B"))
c=float(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.445959
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 11, in <module>
    A=S*(s-a)*(s-b)*(s-c)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B"))
c=float(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.389739
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 11, in <module>
    A=S*(s-a)*(s-b)*(s-c)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B"))
c=float(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.303445
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 11, in <module>
    A=S*(s-a)*(s-b)*(s-c)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B"))
c=float(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.364604
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/1016/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B"))
c=float(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.52209
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/1016/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B"))
c=float(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.644757
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/1016/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B"))
c=float(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.398575
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 11, in <module>
    A=S*(s-a)*(s-b)*(s-c)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B"))
c=float(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.398352
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 11, in <module>
    A=S*(s-a)*(s-b)*(s-c)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B"))
c=float(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.532024
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/1016/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B"))
c=float(input("Insira o valor de C"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.409941
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 11, in <module>
    A=S*(s-a)*(s-b)*(s-c)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.212282
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 11, in <module>
    A=S*(s-a)*(s-b)*(s-c)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.196594
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 11, in <module>
    A=S*(s-a)*(s-b)*(s-c)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.256904
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/1016/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.144367
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 11, in <module>
    A=S*(s-a)*(s-b)*(s-c)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.196506
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 11, in <module>
    A=S*(s-a)*(s-b)*(s-c)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.0982301
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/1016/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=S*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.123697
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 11, in <module>
    A=S*(s-a)*(s-b)*(s-c)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.204042
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.181162
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
Insira o valor de A:Insira o valor de B:Insira o valor de C:709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))
-- EXECUTION TIME:
0.132198
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.187001
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.111645
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
69.41967
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
69.41967
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.129844
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
69.41967
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
600.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.172583
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/1016/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.172973
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
709.16654
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:

-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
69.41967
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.174859
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
600.0
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
709.16654
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.187977
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
709.16654
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
69.41967
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.0917439
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/1016/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.230622
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
709.16654
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:

-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.175178
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
709.16654
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:

-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.102901
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.139146
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:44:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.141149
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:44:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.177926
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:45:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.210511
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:45:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.193175
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:45:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.272458
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
600.0
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:45:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.477193
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
600.0
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:45:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.646734
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
600.0
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
709.16654
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:45:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.231617
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:45:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.19164
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:45:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.54867
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
600.0
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:45:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.718193
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
600.0
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
709.16654
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:45:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.728953
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
600.0
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
709.16654
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
69.41967
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:45:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.214592
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:45:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.187197
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/1016/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:45:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.240527
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
600.0
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
709.16654
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:53:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))

s=(a+b+c)/2

A=s*(s-a)*(s-b)*(s-c)
R=(sqrt(A))
print(round(R,5))

-- EXECUTION TIME:
0.186596
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
